Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
     background-repeat: no-repeat;
 }
 
+html {
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 body{
     text-align:center;
     background-color:#ffcc8e;
